--- a/firefox/data/popup.html
+++ b/firefox/data/popup.html
@@ -14,6 +14,8 @@
 
     <script src="js/freedom_shim_content.js"></script>
     <script src="js/popup_init.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/popup.js"></script>
     <!-- endbuild -->
 
   </head>
@@ -131,7 +133,7 @@
     </section>
 
     <section class="footer">
-      <a class="btn btn-small large-font" href="options.html" target="_blank" title="{{'options'|chromei18n}}">⚙</a>
+      <a class="btn btn-small large-font" href="options.html" target="_blank" title="options">⚙</a>
     </section>
 
     <hr>
