--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -39,16 +39,16 @@
 
       <section class="current-sessions">
         <section class="current-sessions-get">
-          <section ng-show="isEmpty(model.currentSessionsGive)">
+          <section ng-show="isEmpty(model.currentSessionsToInitiate)">
             <h5>Not currently getting access through anyone.</h5>
           </section>
-          <section ng-hide="isEmpty(model.currentSessionsGive)">
+          <section ng-hide="isEmpty(model.currentSessionsToInitiate)">
             <h5>Currently getting access through:</h5>
             <ul>
               <li ng-show="">
                 No one
               </li>
-              <li ng-repeat="(id, contact) in model.currentSessionsGive">
+              <li ng-repeat="(id, contact) in model.currentSessionsToInitiate">
                 {{contact.name}} ({{contact.userId}})
                 <button class="btn btn-mini">Stop</button>
               </li>
@@ -56,16 +56,16 @@
           </section>
         </section>
         <section class="current-sessions-give">
-          <section ng-show="isEmpty(model.currentSessionsGet)">
+          <section ng-show="isEmpty(model.currentSessionsToRelay)">
             <h5>Not currently giving access to anyone.</h5>
           </section>
-          <section ng-hide="isEmpty(model.currentSessionsGet)">
+          <section ng-hide="isEmpty(model.currentSessionsToRelay)">
             <h5>Currently giving access to:</h5>
             <ul>
               <li ng-show="">
                 No one
               </li>
-              <li ng-repeat="(id, contact) in model.currentSessionsGet">
+              <li ng-repeat="(id, contact) in model.currentSessionsToRelay">
                 {{contact.name}} ({{contact.userId}})
                 <button class="btn btn-mini">Stop</button>
               </li>
