--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -22,7 +22,7 @@
     <!-- TODO: i18n -->
 
     <section ng-show="!model.identityStatus.status || model.identityStatus.status == 'offline'">
-      <!-- TODO: replace with https://developers.google.com/+/features/sign-in -->
+      <!-- TODO: replace with oauth view from identity provider -->
       <button class="btn btn-danger" ng-click="authGoog()">g+ sign in</button>
 
       <!-- allow connecting to additional chat services in future version -->
