--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -17,160 +17,162 @@
     <!-- endbuild -->
 
   </head>
-  <body ng-controller="MainCtrl" id="popup">
-
-    <!-- TODO: i18n -->
-
-    <section ng-show="!model.identityStatus.status || model.identityStatus.status == 'offline'">
-      <!-- TODO: replace with oauth view from identity provider -->
-      <button class="btn btn-danger" ng-click="authGoog()">g+ sign in</button>
-
-      <!-- allow connecting to additional chat services in future version -->
+  <!-- TODO: i18n -->
+  <body><div ng-cloak ng-controller="MainCtrl" id="popup">
+    <section ng-show="!connectedToApp">
+      You need to install <a href="TODO(): insert link">the UProxy App</a>.
     </section>
-
-    <section ng-show="model.identityStatus.status == 'connecting'">
-      Connecting to Google Talk...
-    </section>
-
-    <section ng-show="model.identityStatus.status == 'online'">
-      <section class="pagination-right muted">
-        {{model.me.userId}}
+    <section ng-show="connectedToApp">
+      <section ng-show="model.identityStatus.status == 'offline'">
+        <!-- TODO: replace with oauth view from identity provider -->
+        <button class="btn btn-danger" ng-click="authGoog()">g+ sign in</button>
+        <!-- TODO: allow connecting to additional chat services -->
       </section>
 
-      <section class="current-sessions">
-        <section class="current-sessions-get">
-          <section ng-show="isEmpty(model.currentSessionsToInitiate)">
-            <h5>Not currently getting access through anyone.</h5>
+      <section ng-show="model.identityStatus.status == 'connecting'">
+        Connecting to Google Talk...
+      </section>
+
+      <section ng-show="model.identityStatus.status == 'online'">
+        <section class="pagination-right muted">
+          {{model.me.userId}}
+        </section>
+
+        <section class="current-sessions">
+          <section class="current-sessions-get">
+            <section ng-show="isEmpty(model.currentSessionsToInitiate)">
+              <h5>Not currently getting access through anyone.</h5>
+            </section>
+            <section ng-hide="isEmpty(model.currentSessionsToInitiate)">
+              <h5>Currently getting access through:</h5>
+              <ul>
+                <li ng-show="">
+                  No one
+                </li>
+                <li ng-repeat="(id, contact) in model.currentSessionsToInitiate">
+                  {{contact.name}} ({{contact.userId}})
+                  <button class="btn btn-mini">Stop</button>
+                </li>
+              </ul>
+            </section>
           </section>
-          <section ng-hide="isEmpty(model.currentSessionsToInitiate)">
-            <h5>Currently getting access through:</h5>
-            <ul>
-              <li ng-show="">
-                No one
-              </li>
-              <li ng-repeat="(id, contact) in model.currentSessionsToInitiate">
-                {{contact.name}} ({{contact.userId}})
-                <button class="btn btn-mini">Stop</button>
-              </li>
-            </ul>
+          <section class="current-sessions-give">
+            <section ng-show="isEmpty(model.currentSessionsToRelay)">
+              <h5>Not currently giving access to anyone.</h5>
+            </section>
+            <section ng-hide="isEmpty(model.currentSessionsToRelay)">
+              <h5>Currently giving access to:</h5>
+              <ul>
+                <li ng-show="">
+                  No one
+                </li>
+                <li ng-repeat="(id, contact) in model.currentSessionsToRelay">
+                  {{contact.name}} ({{contact.userId}})
+                  <button class="btn btn-mini">Stop</button>
+                </li>
+              </ul>
+            </section>
           </section>
         </section>
-        <section class="current-sessions-give">
-          <section ng-show="isEmpty(model.currentSessionsToRelay)">
-            <h5>Not currently giving access to anyone.</h5>
-          </section>
-          <section ng-hide="isEmpty(model.currentSessionsToRelay)">
-            <h5>Currently giving access to:</h5>
-            <ul>
-              <li ng-show="">
-                No one
-              </li>
-              <li ng-repeat="(id, contact) in model.currentSessionsToRelay">
-                {{contact.name}} ({{contact.userId}})
-                <button class="btn btn-mini">Stop</button>
-              </li>
-            </ul>
-          </section>
+
+        <section class="start-getting-through" ng-show="isEmpty(canGetFrom)">
+          <h5>No one online you can get access through.</h5>
+        </section>
+
+        <section class="start-getting-through" ng-hide="isEmpty(canGetFrom)">
+          <h5>Start getting access through:</h5>
+          <ul>
+            <li ng-repeat="(id, contact) in canGetFrom">
+              {{contact.name}} ({{contact.userId}})
+              <button class="btn btn-mini" ng-click="sendMessage(contact, 'start-proxying')">
+                Start
+              </button>
+            </li>
+          </ul>
+        </section>
+
+        <section class="request-access" ng-hide="isEmpty(cannotGetFrom)">
+          <h5>Request permission to get access through:</h5>
+          <ul>
+            <li ng-repeat="(id, contact) in cannotGetFrom">
+              {{contact.name}} ({{contact.userId}})
+              <button class="btn btn-mini" ng-click="sendMessage(contact, 'request-access')">
+                <span ng-show="model.pendingGetFrom[contact.userId]">Re-</span>Request
+              </button>
+            </li>
+          </ul>
+        </section>
+
+        <section class="pending-give-to" ng-hide="isEmpty(model.pendingGiveTo)">
+          <h5>Requested permission to get access through you:</h5>
+          <ul>
+            <li ng-repeat="(id, contact) in model.pendingGiveTo">
+              {{contact.name}} ({{contact.userId}})
+              <div class="btn-group">
+                <button class="btn btn-mini" ng-click="sendMessage(contact, 'allow')">Allow</button>
+                <button class="btn btn-mini" ng-click="freedomEmit('ignore', contact.userId)">Ignore</button>
+              </div>
+            </li>
+          </ul>
+        </section>
+
+        <section class="online-no-uproxy" ng-show="isEmpty(contactsOnlineNotMessageable)">
+          <h5>No other contacts currently online.</h5>
+        </section>
+
+        <section class="online-no-uproxy" ng-hide="isEmpty(contactsOnlineNotMessageable)">
+          <h5>Online contacts not running UProxy:</h5>
+          <ul>
+            <li ng-repeat="contact in contactsOnlineNotMessageable">
+              {{contact.name}} ({{contact.userId}})
+              <button class="btn btn-mini" ng-click="freedomEmit('invite-friend', contact.userId)">Ask to run UProxy</button>
+            </li>
+          </ul>
         </section>
       </section>
 
-      <section class="start-getting-through" ng-show="isEmpty(canGetFrom)">
-        <h5>No one online you can get access through.</h5>
+      <section class="footer">
+        <a class="btn btn-small large-font" href="options.html" target="_blank" title="{{'options'|chromei18n}}">⚙</a>
       </section>
 
-      <section class="start-getting-through" ng-hide="isEmpty(canGetFrom)">
-        <h5>Start getting access through:</h5>
-        <ul>
-          <li ng-repeat="(id, contact) in canGetFrom">
-            {{contact.name}} ({{contact.userId}})
-            <button class="btn btn-mini" ng-click="sendMessage(contact, 'start-proxying')">
-              Start
-            </button>
-          </li>
-        </ul>
-      </section>
+      <hr>
 
-      <section class="request-access" ng-hide="isEmpty(cannotGetFrom)">
-        <h5>Request permission to get access through:</h5>
-        <ul>
-          <li ng-repeat="(id, contact) in cannotGetFrom">
-            {{contact.name}} ({{contact.userId}})
-            <button class="btn btn-mini" ng-click="sendMessage(contact, 'request-access')">
-              <span ng-show="model.pendingGetFrom[contact.userId]">Re-</span>Request
-            </button>
-          </li>
-        </ul>
-      </section>
+      <details id="debug" open ng-controller="DebugCtrl" ng-show="model._debug">
+        <summary>Debug</summary>
 
-      <section class="pending-give-to" ng-hide="isEmpty(model.pendingGiveTo)">
-        <h5>Requested permission to get access through you:</h5>
-        <ul>
-          <li ng-repeat="(id, contact) in model.pendingGiveTo">
-            {{contact.name}} ({{contact.userId}})
-            <div class="btn-group">
-              <button class="btn btn-mini" ng-click="sendMessage(contact, 'allow')">Allow</button>
-              <button class="btn btn-mini" ng-click="freedomEmit('ignore', contact.userId)">Ignore</button>
-            </div>
-          </li>
-        </ul>
-      </section>
+        <div class="well">
+          <button class="btn btn-block btn-mini" ng-click="freedomEmit('reset')">Reset</button>
 
-      <section class="online-no-uproxy" ng-show="isEmpty(contactsOnlineNotMessageable)">
-        <h5>No other contacts currently online.</h5>
-      </section>
+          <details open>
+            <summary>message log</summary>
 
-      <section class="online-no-uproxy" ng-hide="isEmpty(contactsOnlineNotMessageable)">
-        <h5>Online contacts not running UProxy:</h5>
-        <ul>
-          <li ng-repeat="contact in contactsOnlineNotMessageable">
-            {{contact.name}} ({{contact.userId}})
-            <button class="btn btn-mini" ng-click="freedomEmit('invite-friend', contact.userId)">Ask to run UProxy</button>
-          </li>
-        </ul>
-      </section>
+            <pre>{{model._msgLog | json}}</pre>
+          </details>
+
+          <details open>
+            <summary>chat</summary>
+
+            <form name="sendMsgForm" ng-submit="submitChat()">
+              <select ng-model="userId" required>
+                <option value="">Select contact</option>
+                <option ng-repeat="(id, contact) in model.roster" value="{{id}}">
+                  {{id}} {{(contact|messageable) && '(messageable)' || ((contact|onlineNotMessageable) && '(online)' || '(offline)')}}
+                </option>
+              </select>
+
+              <div class="input-append">
+                <input type="text" required ng-model="msg" placeholder="message">
+                <input type="submit" value="send" class="btn" ng-disabled="sendMsgForm.$invalid">
+              </div>
+            </form>
+          </details>
+
+          <details open>
+            <summary>state</summary>
+            <pre>{{model | json}}</pre>
+          </details>
+        </div>
+      </details>
     </section>
-
-    <section class="footer">
-      <a class="btn btn-small large-font" href="options.html" target="_blank" title="{{'options'|chromei18n}}">⚙</a>
-    </section>
-
-    <hr>
-
-    <details id="debug" open ng-controller="DebugCtrl" ng-show="model._debug">
-      <summary>Debug</summary>
-
-      <div class="well">
-        <button class="btn btn-block btn-mini" ng-click="freedomEmit('reset')">Reset</button>
-
-        <details open>
-          <summary>message log</summary>
-
-          <pre>{{model._msgLog | json}}</pre>
-        </details>
-
-        <details open>
-          <summary>chat</summary>
-
-          <form name="sendMsgForm" ng-submit="submitChat()">
-            <select ng-model="userId" required>
-              <option value="">Select contact</option>
-              <option ng-repeat="(id, contact) in model.roster" value="{{id}}">
-                {{id}} {{(contact|messageable) && '(messageable)' || ((contact|onlineNotMessageable) && '(online)' || '(offline)')}}
-              </option>
-            </select>
-
-            <div class="input-append">
-              <input type="text" required ng-model="msg" placeholder="message">
-              <input type="submit" value="send" class="btn" ng-disabled="sendMsgForm.$invalid">
-            </div>
-          </form>
-        </details>
-
-        <details open>
-          <summary>state</summary>
-          <pre>{{model | json}}</pre>
-        </details>
-      </div>
-    </details>
-  </body>
+  </div></body>
 </html>
