small module refactor
break out into separate UProxyChromeExtension-{options,popup} modules

--- a/chrome/extension/src/options.html
+++ b/chrome/extension/src/options.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="UProxyChromeExtension" ng-csp>
+<html ng-app="UProxyChromeExtension-options" ng-csp>
   <head>
     <meta charset="utf-8">
 
