--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="UProxyChromeExtension" ng-csp>
+<html ng-app="UProxyChromeExtension-popup" ng-csp>
   <head>
     <meta charset="utf-8">
 
