--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -10,7 +10,7 @@
     <script src="bower_components/lodash/dist/lodash.mobile.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-lodash/angular-lodash.js"></script>
-    <script src="bower_components/oauth2-extensions/lib/oauth2.js"></script>
+    <!--script src="bower_components/oauth2-extensions/lib/oauth2.js"></script-->
 
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
