--- a/chrome/extension/src/options.html
+++ b/chrome/extension/src/options.html
@@ -24,6 +24,44 @@
 
     <ul class="options">
       <li>
+        <h4>Profile</h4>
+        <label>
+          Client Name:
+          <input type="text" placeholder="Client Name" required ng-model="model.profile.clientName">
+        </label>
+        <label>
+          Public Key:
+          <input type="text" placeholder="Public Key" readonly ng-model="model.profile.publicKey">
+          <button class="btn btn-mini">regenerate</button>
+        </label>
+        <label>
+          Networks:
+          <button class="btn btn-danger btn-mini active">G+</button>
+        </label>
+      </li>
+      <li>
+        <h4>Contacts</h4>
+        <ul style="max-height: 400px; overflow-y: scroll; border: thin solid gray">
+          <li ng-repeat="contact in model.contacts">
+            <ul>
+              <li ng-repeat="client in contact.clients">
+                <h5>{{client.clientName}}</h5>
+                <div style="margin-left: 15px">
+                  <label class="checkbox inline">
+                    <input type="checkbox" ng-model="client.hasClientPermission">
+                    Grant access to
+                  </label>
+                  <label class="checkbox inline">
+                    <input type="checkbox" ng-model="client.desiredAsServer">
+                    Seek access from
+                  </label>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li>
         <details open class="advanced">
           <summary>{{'advanced'|chromei18n}}</summary>
 
@@ -35,6 +73,18 @@
                   <!-- XXX DRY: use a directive to automatically bind ng-click to the proper
                                 changeOption call based on the ng-model binding -->
                 {{'allowNonroutableAddresses'|chromei18n}}
+              </label>
+            </li>
+            <li>
+              <label>
+                Turn servers:
+                <input type="text" ng-model="model.options.turnServers">
+              </label>
+            </li>
+            <li>
+              <label>
+                Stun servers:
+                <input type="text" ng-model="model.options.stunServers">
               </label>
             </li>
           </ul>
