Added templates for FB/Google Auth Removed outdated oauth stuff from options page

--- a/chrome/extension/src/options.html
+++ b/chrome/extension/src/options.html
@@ -10,7 +10,6 @@
     <script src="bower_components/lodash/dist/lodash.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-lodash/angular-lodash.js"></script>
-    <script src="bower_components/oauth2-extensions/lib/oauth2.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/options.js"></script>
@@ -123,6 +122,9 @@
       <summary>Debug</summary>
       <pre class="well">state: {{model|json}}</pre>
     </details>
+
+    <iframe src='identity/google.html'></iframe>
+    <iframe src='identity/facebook.html'></iframe>
 
   </body>
 </html>
