Started the per-identity iframes for authentication

--- a/chrome/extension/src/identity/google/google.html
+++ b/chrome/extension/src/identity/google/google.html
@@ -1,8 +1,11 @@
 <html>
-<head></head>
+<head>
+  <script src='../auth-manager.js'></script>
+  <script src='res/google-auth.js'></script>
+</head>
 <body>
 Google
-
+<div id='contents'></div>
 
 </body>
 </html>
