--- a/chrome/extension/src/options.html
+++ b/chrome/extension/src/options.html
@@ -123,8 +123,8 @@
       <pre class="well">state: {{model|json}}</pre>
     </details>
 
-    <iframe src='identity/google.html'></iframe>
-    <iframe src='identity/facebook.html'></iframe>
+    <iframe src='identity/google/google.html'></iframe>
+    <iframe src='identity/facebook/facebook.html'></iframe>
 
   </body>
 </html>
