Getting Facebook userId and auth_token

--- a/chrome/extension/src/identity/facebook/facebook.html
+++ b/chrome/extension/src/identity/facebook/facebook.html
@@ -1,6 +1,10 @@
 <html>
-<head></head>
+<head>
+  <script src='../auth-manager.js'></script>
+  <script src='res/facebook-auth.js'></script>
+</head>
 <body>
 Facebook
+<div id='contents'>
 </body>
 </html>
