--- a/chrome/extension/src/options.html
+++ b/chrome/extension/src/options.html
@@ -35,8 +35,19 @@
         </label>
         <label>
           Networks:
-          <button class="btn btn-danger btn-mini active">G+</button>
         </label>
+            <button class="btn btn-mini" ng-show="!isOnline('loopback')"
+                  ng-click="login('loopback')">Loop</button>
+            <button class="btn btn-mini active" ng-show="isOnline('loopback')"
+                  ng-click="logout('loopback')">Loop</button>
+            <button class="btn btn-danger btn-mini" ng-show="!isOnline('google')"
+                  ng-click="login('google')">G+</button>
+            <button class="btn btn-danger btn-mini active" ng-show="isOnline('google')"
+                  ng-click="logout('google')">G+</button>
+            <button class="btn btn-primary btn-mini" ng-show="!isOnline('facebook')"
+                  ng-click="login('facebook')">FB</button>
+            <button class="btn btn-primary btn-mini active" ng-show="isOnline('facebook')"
+                  ng-click="logout('facebook')">FB</button>
       </li>
       <li>
         <h4>Contacts</h4>
