Commit partial changes to freedom shim.

--- a/firefox/data/freedom-page-worker.html
+++ b/firefox/data/freedom-page-worker.html
@@ -7,6 +7,7 @@
     <script src="js/plumbing.js"></script>
     <script src="submodules/uproxy-common/submodules/freedom/freedom.js" data-manifest="submodules/uproxy-common/uproxy.json"></script>
     <script src="js/freedom_shim_freedom.js"></script>
+    <script src="js/page_worker_init.js"></script>
   </head>
   <body>
   </body>
