Add in pieces for DI in popup and options.

--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -13,6 +13,7 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/options.js"></script>
+    <script src="scripts/dependencies.js"></script>
     <!-- endbuild -->
 
   </head>
