Factor out more chrome specific dependencies.

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -14,6 +14,7 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
+    <script src="/scripts/dependencies.js"></script>
     <!-- endbuild -->
 
   </head>
@@ -24,10 +25,7 @@
       <a href="https://github.com/UWNetworksLab/UProxy/tree/master/chrome/app" target="_blank">
       UProxy app</a>. Please ensure it is
       <a href="https://github.com/UWNetworksLab/UProxy/#testing-in-chrome" target="_blank">
-      installed</a> and running by checking your <code>chrome://extensions</code> page, and
-      <a href="https://github.com/UWNetworksLab/UProxy/blob/81f5bee/chrome/app/js/plumbing.js#L9"
-      target="_blank">expecting this extension to have the right ID</a>
-      (<code>{{extensionID}}</code>).
+      installed</a> and running by checking your <code>chrome://extensions</code> page.
     </section>
     <section ng-show="connectedToApp">
       <!--
