--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -139,7 +139,7 @@
       -->
 
       <section class="footer">
-        <a class="btn btn-small large-font" href="options.html" target="_blank" title="{{'options'|chromei18n}}">⚙</a>
+        <a class="btn btn-small large-font" href="options.html" target="_blank" title="{{'options'|i18n}}">⚙</a>
       </section>
 
       <hr>
