Some fixes for FF from the common refactor.

--- a/firefox/data/freedom-page-worker.html
+++ b/firefox/data/freedom-page-worker.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="js/socket_firefox.js"></script>
-    <script src="js/view_oauth.js"></script>
-    <script src="js/plumbing.js"></script>
-    <script src="submodules/uproxy-common/submodules/freedom/freedom.js" data-manifest="submodules/uproxy-common/uproxy.json"></script>
-    <script src="js/freedom_shim_freedom.js"></script>
+    <script src="scripts/socket_firefox.js"></script>
+    <script src="scripts/view_oauth.js"></script>
+    <script src="scripts/plumbing.js"></script>
+    <script src="scripts/freedom_shim_freedom.js"></script>
+        <script src="common/freedom/freedom.js" data-manifest="common/backend/uproxy.json"></script>
   </head>
   <body>
   </body>
