Popup working again in FF.

--- a/firefox/data/freedom-page-worker.html
+++ b/firefox/data/freedom-page-worker.html
@@ -5,8 +5,8 @@
     <script src="scripts/socket_firefox.js"></script>
     <script src="scripts/view_oauth.js"></script>
     <script src="scripts/plumbing.js"></script>
-    <script src="scripts/freedom_shim_freedom.js"></script>
-        <script src="common/freedom/freedom.js" data-manifest="common/backend/uproxy.json"></script>
+    <script src="common/freedom/freedom.js" data-manifest="common/backend/uproxy.json">{"strongIsolation": true, "stayLocal": true, "debug": false}</script>
+     <script src="scripts/freedom_shim_freedom.js"></script>
   </head>
   <body>
   </body>
