--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -14,7 +14,7 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
-    <script src="/scripts/dependencies.js"></script>
+    <script src="../../scripts/dependencies.js"></script>
     <!-- endbuild -->
 
   </head>
