--- a/chrome/app/launch.html
+++ b/chrome/app/launch.html
@@ -20,8 +20,7 @@
     <script type="text/javascript" src="proxy/webRtcUtil.js"></script>
     <script type="text/javascript" src="proxy/webRtcRelayer.js"></script>
 
-    <!--
-    <script type="text/javascript" src="proxy/socksWebRtc.js"></script>
-    -->
+    <script type="text/javascript" src="common/scraps/video-test.js"></script>
+
   </body>
 </html>
