first untested version of new sctp with multiple data channels

--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <title>UProxy</title>
-    <!-- <script type="text/javascript" src="identity/node-xmpp-browser.js"></script>
-    <script type="text/javascript" src="oauth.js"></script>
-    <script type="text/javascript" src="identity/xmppDaemon.js"></script>
-    <script type="text/javascript" src="js/launch.js"></script> -->
+    <!-- <script type="text/javascript" src="launch.js"></script> -->
     <link rel="stylesheet" href="style.css" type="text/css" />
     <style>
       body {
@@ -19,12 +16,12 @@
       Used for testing/debugging. TODO: add a version of the UI here too; tell the user to install the extension if needed.
     </div>
   <!--
-    <script type="text/javascript" src="proxy/tcp-server2.js"></script>
-    <script type="text/javascript" src="proxy/socks.js"></script>
-    <script type="text/javascript" src="proxy/socks_test.js"></script>
-    <script type="text/javascript" src="proxy/webRtcUtil.js"></script>
-    <script type="text/javascript" src="proxy/webRtcRelayer.js"></script>
-    <script type="text/javascript" src="common/scraps/video-test.js"></script>
+    <script type="text/javascript" src="tcp-server2.js"></script>
+    <script type="text/javascript" src="socks.js"></script>
+    <script type="text/javascript" src="socks_test.js"></script>
+    <script type="text/javascript" src="webRtcUtil.js"></script>
+    <script type="text/javascript" src="webRtcRelayer.js"></script>
+    <script type="text/javascript" src="video-test.js"></script>
   -->
   </body>
 </html>
