rename common ng modules from UProxyChromeExtension* to UProxyExtension*

--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="UProxyChromeExtension-options" ng-csp>
+<html ng-app="UProxyExtension-options" ng-csp>
   <head>
     <meta charset="utf-8">
 
