--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="UProxyChromeExtension-popup" ng-csp>
+<html ng-app="UProxyExtension-popup" ng-csp>
   <head>
     <meta charset="utf-8">
 
@@ -24,6 +24,7 @@
       Not connected to
       <a href="https://github.com/UWNetworksLab/UProxy/tree/master/chrome/app" target="_blank">
       UProxy app</a>. Please ensure it is
+      <!-- TODO: Make this sentence browser independent. -->
       <a href="https://github.com/UWNetworksLab/UProxy/#testing-in-chrome" target="_blank">
       installed</a> and running by checking your <code>chrome://extensions</code> page.
     </section>
